<?xml version="1.0"?>
<package>
  <name>barrett_hand_common</name>
  <version>0.1.0</version>
  <description>The barrett hand common metapackage contains all the common packages for the Barrett hand</description>

  <maintainer email="rnavarro@robotnik.es">Rom치n Navarro</maintainer>
  <maintainer email="jarino@robotnik.es">Jorge Ari침o</maintainer>
  
  <author email="rnavarro@robotnik.es">Rom치n Navarro</author>
  <author email="jarino@robotnik.es">Jorge Ari침o</author>
  
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/barrett_hand_common</url>
  <url type="repository">https://github.com/RobotnikAutomation/barrett_hand_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/barrett_hand_common/issues</url>


  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>barrett_hand_description</run_depend>

  <export><metapackage/></export>

</package>
